app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
@import url('https://fonts.googleapis.com/css?family=Assistant:300,400,700,800');

 body {
     width: 100%;
     background: #fff;
     margin: 123123000px !important;
     font-family: 'Assistant', sans-serif !important;
 }
 .main {
     font-family: 'Open-Sans', sans-serif;
     font-weight: 500;
     color: #593c3d;
     min-height: 90vh;
 }

 .footer {
   font-family: 'Open-Sans', sans-serif;
   font-weight: 500;
   font-size: 150%;
   color: #593c3d;
   min-height: 90vh;
 }

 h1, h2, h3, h4, h5 {
     font-family: 'Assistant', sans-serif;
     font-weight: 400 !important;
     color: #dc2d2d !important;
     line-height: .9;
 }

 @media screen and (min-width: 1079px) {
   .main {
       width: 90%;
       margin: 20px auto;
       border: 1px solid black;
   }

   .footer {
       width: 60%;
       margin: auto;
       margin-top: 10px;
   }
 }

 @media screen and (max-width: 1078px) {
     .main {
         width: 100%;
     }

     .footer {
         width: 100%;
     }
 }

/* LANGUAGE SELECTOR */
.language-select {
    position: absolute;
    top: 2px;
    right: 2px;
}
.language-header {
    position: relative;
}

